--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.26.1",
     "sass": "^1.77.8"
