--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "@types/cropperjs": "^1.3.3",
+    "@types/react-dropzone": "^5.1.0",
+    "cropperjs": "^1.5.12",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.26.1",
